파일이름 수정 및 내용 수정

--- a/_posts/2019-07-21-LDA사용하기.md
+++ b/_posts/2019-07-21-LDA사용하기.md
@@ -88,7 +88,7 @@ lda_model = gensim.models.ldamodel.LdaModel(corpus=corpus,
 #http://blog.naver.com/PostView.nhn?blogId=upennsolution&logNo=221437143732&from=search&redirect=Log&widgetTypeCall=true&directAccess=false
 NUM_TOPICS = 20
 
-word_dict = {};
+word_dict = {}
 
 for i in range(NUM_TOPICS):
     words = lda_model.show_topic(i, topn = 20)
@@ -103,7 +103,7 @@ vis = pyLDAvis.gensim.prepare(lda_model, corpus, id2word)
 vis
 ```
 
-### TfIdf하는 방법은[Source]()
+### TfIdf하는 방법은
 
 앞에서 수행했던 코드에서 
 ```python
