--- a/_posts/2019-07-21-LDA사용하기.md
+++ b/_posts/2019-07-21-LDA사용하기.md
@@ -7,6 +7,8 @@ external-url:
 categories: NLP
 ---
 
+[Medium](https://medium.com/@sangjinsim/lda-tfidf-fc6334411601)
+
 > Gensim을 이용하여 LDA를 하는 코드를 적어놓는다. 
 
 ### Pandas에서 nan인 것들만 조건을 제거하기
